--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,14 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+  <script src="https://kit.fontawesome.com/772967b2db.js" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="./assets/css/animate.css">
+
 </head>
-<body>
+<body class="container animate__animated animate__fadeIn animate__slow">
+
   <app-root></app-root>
 </body>
 </html>
